--- a/index.html
+++ b/index.html
@@ -198,10 +198,11 @@ body { background-color: #eee; }
 (link: &quot;Assessment&quot;)[(set: $gameType to &quot;Assessment&quot;)(goto: &quot;Results&quot;)]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="Assessment" tags="" position="400,550">Assessment games evaluate the player&#x27;s skills and abilities through carefully measured interactive moments. They are different from Training/Learning games because their aim is not to teach, but simply to measure existing player capabilities.</tw-passagedata><tw-passagedata pid="4" name="Empathy/Awareness" tags="" position="400,825">Empathy/awareness games aim to expose their players to a specific real world topic or situation. Though they can evaluate the level to which their players understand the intracacies of the topic, they are not required to.</tw-passagedata><tw-passagedata pid="5" name="Start" tags="intro" position="950,150">&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .25s forwards;&quot;&gt;Welcome to the [[QUEST|Quest]], Creative Associates&#x27; internal resource for exploring the [[potential of games|Potential of Games]] by practice area.&lt;/div&gt;
 &lt;div style=&quot;opacity: 0; animation: fadeIn 2s .5s forwards;&quot;&gt;On your journey to discover if a game is suitable for your current project, QUEST aims to equip you with a map of the existing territory and a sense of direction.&lt;/div&gt; 
+&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .75s forwards;&quot;&gt;Within this tool, you will see text highlighted in blue. Select these interactive elements to explore their contents further.&lt;/div&gt;
 
-&lt;div style=&quot;opacity: 0; animation: fadeIn 2s 1.25s forwards;&quot;&gt;What would you like to do?
+&lt;div style=&quot;opacity: 0; animation: fadeIn 2s 1.5s forwards;&quot;&gt;What would you like to do?
 
-[[Learn about currently existing games by practice area|Division]]
+[[Learn about currently existing games by practice area|Existing Games]]
 [[Explore the creaton of an entirely new game|SGDA Intro]]
 &lt;/div&gt;
 
@@ -301,7 +302,7 @@ tw-sidebar tw-icon.undo {
 (if: (passage:)&#x27;s tags&#x27;s length &gt; 0)[
 (print: &quot;&lt;script&gt;$(&#x27;html&#x27;).addClass(&#x27;&quot; + (passage:)&#x27;s tags.join(&#x27; &#x27;) + &quot;&#x27;\)&lt;/script&gt;&quot;)
 ]
-}</tw-passagedata><tw-passagedata pid="10" name="Social/Behavioral Change" tags="" position="400,700">*Placeholder* Behavioral change games aim to break physical or mental habits.</tw-passagedata><tw-passagedata pid="11" name="Title" tags="" position="950,0">(set: $division to &quot;&quot;)
+}</tw-passagedata><tw-passagedata pid="10" name="Social/Behavioral Change" tags="" position="400,700">Social/Behavioral change games aim to encourage or discourage behaviors or shape perceptions and attitudes in sustainable ways.</tw-passagedata><tw-passagedata pid="11" name="Title" tags="" position="950,0">(set: $division to &quot;&quot;)
 (set: $gameType to &quot;&quot;)
 
 &lt;div style=&quot;
@@ -5357,8 +5358,12 @@ Thus, it offers a potential for a critical discourse about the strength
 and weaknesses of a serious game:   
   &lt;/div&gt; 
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="105" name="SGDA Intro" tags="" position="950,1000">&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .5s forwards;&quot;&gt;When setting out to create a new game, we should never set out empty handed. Being well-informed of similar games that we seek to create, and understanding the essential tenants that comprise an elegant purposeful game design are paramount.&lt;/div&gt;
-&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .75s forwards;&quot;&gt;The work by MIT researcher Konstantin Mitgutsch in the realm of purposeful game design will aid greatly to this end. His framework, coined the //Serious Game Design Assessment (SGDA)//, seeks to evaluate the efficacy of purposeful games by consciously addressing the shortcomings of past serious game evaluation methodologies. It identifies six critical design elements--purpose, content/information, mechanics, fiction/narrative, aesthetics/graphics, and framing--which are investigated separately and jointly. We can use this framework as as lens to look back onto any game we seek to create.&lt;/div&gt;
-&lt;div style=&quot;opacity: 0; animation: fadeIn 2s 1s forwards;&quot;&gt;[[Explore the SGDA Framework|SGDA Framework]]&lt;/div&gt; </tw-passagedata></tw-storydata>
+&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .75s forwards;&quot;&gt;The work by MIT researcher Konstantin Mitgutsch in the realm of purposeful game design will aid greatly to this end. His framework, coined the //Serious Game Design Assessment (SGDA)//, seeks to evaluate the efficacy of purposeful games by consciously addressing the shortcomings of past serious game evaluation methodologies. It identifies six critical design elements - purpose, content/information, mechanics, fiction/narrative, aesthetics/graphics, and framing - which are investigated separately and jointly. We can use this framework as a lens to look back onto any game we seek to create.&lt;/div&gt;
+&lt;div style=&quot;opacity: 0; animation: fadeIn 2s 1s forwards;&quot;&gt;[[Explore the SGDA Framework|SGDA Framework]]&lt;/div&gt; </tw-passagedata><tw-passagedata pid="106" name="Existing Games" tags="" position="950,300">&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .25s forwards;&quot;&gt;Before attempting to create a new game, it is worth examining the existing territory to get a sense of what has come before. This could not only inform your new game&#x27;s design and implementation decisions, but could also direct you to using a game that already exists - saving time, money, and energy from development.&lt;/div&gt;
+
+&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .5s forwards;&quot;&gt;Within QUEST is a database of a wide range of games relevant to each practice area within Creative. Overtime, this database will continue to grow, with the goal of being able to rapidly inform you of the existing territory.&lt;/div&gt;
+
+&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .75s forwards;&quot;&gt;[[Explore!|Division]]&lt;/div&gt;</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
