--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@ body { background-color: #eee; }
 
 &lt;div style=&quot;opacity: 0; animation: fadeIn 2s 1.5s forwards;&quot;&gt;What would you like to do?
 
-[[Learn about currently existing games by practice area|Existing Games]]
-[[Explore the creaton of an entirely new game|SGDA Intro]]
+[[Learn about currently existing games by practice area.|Existing Games]]
+[[Explore the creation of an entirely new game.|SGDA Intro]]
 &lt;/div&gt;
 
 
@@ -5359,11 +5359,11 @@ and weaknesses of a serious game:
   &lt;/div&gt; 
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="105" name="SGDA Intro" tags="" position="950,1000">&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .5s forwards;&quot;&gt;When setting out to create a new game, we should never set out empty handed. Being well-informed of similar games that we seek to create, and understanding the essential tenants that comprise an elegant purposeful game design are paramount.&lt;/div&gt;
 &lt;div style=&quot;opacity: 0; animation: fadeIn 2s .75s forwards;&quot;&gt;The work by MIT researcher Konstantin Mitgutsch in the realm of purposeful game design will aid greatly to this end. His framework, coined the //Serious Game Design Assessment (SGDA)//, seeks to evaluate the efficacy of purposeful games by consciously addressing the shortcomings of past serious game evaluation methodologies. It identifies six critical design elements - purpose, content/information, mechanics, fiction/narrative, aesthetics/graphics, and framing - which are investigated separately and jointly. We can use this framework as a lens to look back onto any game we seek to create.&lt;/div&gt;
-&lt;div style=&quot;opacity: 0; animation: fadeIn 2s 1s forwards;&quot;&gt;[[Explore the SGDA Framework|SGDA Framework]]&lt;/div&gt; </tw-passagedata><tw-passagedata pid="106" name="Existing Games" tags="" position="950,300">&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .25s forwards;&quot;&gt;Before attempting to create a new game, it is worth examining the existing territory to get a sense of what has come before. This could not only inform your new game&#x27;s design and implementation decisions, but could also direct you to using a game that already exists - saving time, money, and energy from development.&lt;/div&gt;
+&lt;div style=&quot;opacity: 0; animation: fadeIn 2s 1s forwards;&quot;&gt;[[Explore the SGDA Framework|SGDA Framework]]&lt;/div&gt; </tw-passagedata><tw-passagedata pid="106" name="Existing Games" tags="" position="950,300">&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .25s forwards;&quot;&gt;Before attempting to create a new game, it is worth examining the existing territory to get a sense of what has come before. This could not only inform your new game&#x27;s design and implementation decisions, but could also direct you to using a game that already exists - saving time, money, and energy that would have come from game development.&lt;/div&gt;
 
-&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .5s forwards;&quot;&gt;Within QUEST is a database of a wide range of games relevant to each practice area within Creative. Overtime, this database will continue to grow, with the goal of being able to rapidly inform you of the existing territory.&lt;/div&gt;
+&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .5s forwards;&quot;&gt;Within QUEST is a database of a wide range of games relevant to each of Creative&#x27;s practice areas. Over time, this database will continue to grow, becoming more efficient at rapidly informing you of the existing territory.&lt;/div&gt;
 
-&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .75s forwards;&quot;&gt;[[Explore!|Division]]&lt;/div&gt;</tw-passagedata></tw-storydata>
+&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .75s forwards;&quot;&gt;[[Explore the database|Division]]&lt;/div&gt;</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
