adjusted the sgda framework descriptions

--- a/index.html
+++ b/index.html
@@ -2160,18 +2160,7 @@ D2D is working on three more games, including Groove Nation, the first ever danc
     font-size: 75%;
 	animation: sgdaTitle 2s forwards;
 	animation-delay: .5s&quot;&gt;
-	This component of the SGDA Framework refers to the audiovisual
-language (aesthetic characteristics, imagery, style preferences,
-artistic media, and the computer graphic techniques)
-conceptualized, chosen and developed by the designers for the
-visualization, and the display of the elements involved in the
-game. The aesthetics and graphics define the overall formal
-aspects that frame the content (information), the fiction (the world
-and characters of the game), the framing (target group), the
-setting, and the mechanics (instructions, rewards) of the game.
-Since the aesthetics/graphics present the game to the player from
-the first image on, it plays a fundamental role in the introduction
-of the game’s purpose and its impact on the player  
+	This component of the SGDA Framework refers to the audiovisual language (aesthetic characteristics, imagery, style preferences, artistic media, and the computer graphic techniques) conceptualized, chosen and developed by the designers for the visualization, and the display of the elements involved in the game. The aesthetics and graphics define the overall formal aspects that frame the content (information), the fiction (the world and characters of the game), the framing (target group), the setting, and the mechanics (instructions, rewards) of the game. Since the aesthetics/graphics present the game to the player from the first image on, it plays a fundamental role in the introduction of the game’s purpose and its impact on the player.
   &lt;/div&gt; 
 &lt;/div&gt;
 </tw-passagedata><tw-passagedata pid="98" name="SGDA Framework" tags="" position="950,1150">&lt;/style&gt;
@@ -3032,7 +3021,7 @@ of the game’s purpose and its impact on the player
   
   &lt;div style=&quot;
   	opacity: 0;
-    top: -52px;
+    top: 10%;
     left: -724px;
     width: 650px;
     height: 10px;
@@ -3043,35 +3032,9 @@ of the game’s purpose and its impact on the player
     font-size: 75%;
 	animation: sgdaTitle 2s forwards;
 	animation-delay: .5s&quot;&gt;
-	Our assessment of a purposeful game design starts with the
-investigation of the games´ purpose to impact its players. Every
-game has certain goals and designers follow their explicit or
-implicit intentions when designing it. However, while in
-entertainment-oriented games the purpose is self-contained and
-focused on the gameplay experience, serious games and many
-educational games are explicitly designed to reach a specific
-purpose beyond the game itself. The purpose is reflected directly
-in the aim of the game and its topic, but also in the designer’s
-intentions and their goal to impact the players in a specific way. In
-a nutshell, if a serious game has no impact on the player in a real
-life context, it misses its pivotal purpose. For this reason, the
-game’s purpose acts as the driving force that shapes the dynamic
-and the coherence of the game system as a whole. It is critical to
-acknowledge that players bring their own intentions and purposes
-to the gameplay experience and might understand a game
-differently than intended by the designers. Additionally, the
-configuration of the game system influences how the players read
-and experience the game. In this sense, the purpose can never be
-“transferred” directly as intended in its design, but the game
-structure impacts the possibility space provided by the game.
-Consequently, the explicit intention and the purpose of the game
-need to be considered throughout the components of their design.
-To exemplify the use of our SGDA Framework we outline our
-findings in each element of the holistic design and
-discuss the coherence and cohesiveness of the game system. We
-also focus on explicit statements regarding the designers’
-intentions and aims. In the following steps, our approach is
-exemplified by comparison of two serious games:  
+	Our assessment of a purposeful game design starts with the investigation of the game&#x27;s purpose to impact its players. Every game has certain goals and designers follow their explicit or implicit intentions when designing it. However, while in entertainment-oriented games the purpose is self-contained and focused on the gameplay experience, serious games and many educational games are explicitly designed to reach a specific purpose beyond the game itself. The purpose is reflected directly in the aim of the game and its topic, but also in the designer’s intentions and their goal to impact the players in a specific way. In a nutshell, if a serious game has no impact on the player in a real life context, it misses its pivotal purpose. For this reason, the game’s purpose acts as the driving force that shapes the dynamic and the coherence of the game system as a whole. 
+	
+	It is critical to acknowledge that players bring their own intentions and purposes to the gameplay experience and might understand a game differently than intended by the designers. Additionally, the configuration of the game system influences how the players read and experience the game. In this sense, the purpose can never be “transferred” directly as intended in its design, but the game structure impacts the possibility space provided by the game. Consequently, the explicit intention and the purpose of the game need to be considered throughout the components of their design.
   &lt;/div&gt; 
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="100" name="Fiction/Narrative" tags="" position="825,1350">&lt;style&gt;
 
@@ -3511,18 +3474,9 @@ exemplified by comparison of two serious games:
     font-size: 75%;
 	animation: sgdaTitle 2s forwards;
 	animation-delay: .5s&quot;&gt;
-	While the content holds the provided information and the
-mechanics impact the gameplay possibilities, the dimension of
-fiction and narrative introduces a fictional context. Without
-tapping into the broader discourse about whether games are
-narratives, fictional worlds or interactive stories, the SGDA
-Framework focuses on the created fictional space and how it
-relates to the games purpose. As Charsky argues, this
-fictional context involves “the setting, narrative, story, scenario,
-characters, back story, problem, and so on for the game play”. In
-similar cases, the game might not offer a linear story, or simulate
-or represent a specific issue, but provide a mechanics-based space
-that enables players to create their own stories.   
+	While the content holds the provided information and the mechanics impact the gameplay possibilities, the dimension of fiction and narrative introduces a fictional context. Without tapping into the broader discourse about whether games are narratives, fictional worlds or interactive stories, the SGDA Framework focuses on the created fictional space and how it relates to the games purpose. 
+	
+	This fictional context involves the setting, narrative, story, scenario, characters, back story, problem, and so on for the gameplay. In similar cases, the game might not offer a linear story, or simulate or represent a specific issue, but provide a mechanics-based space that enables players to create their own stories. [[Minecraft|Minecraft Education Edition]] is an excellent example of one such game.
   &lt;/div&gt;  
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="101" name="Mechanic" tags="" position="950,1300">&lt;style&gt;
 
@@ -3964,21 +3918,9 @@ that enables players to create their own stories.
     font-size: 75%;
 	animation: sgdaTitle 2s forwards;
 	animation-delay: .5s&quot;&gt;
-	The question of what game mechanics are is complex and it is
-discussed extensively within the field of game studies. In
-short, game mechanics are the “methods invoked by agents for
-interacting with the game world”. The mechanics involve the
-establishment of the rules that define the possibility space for
-operations in the game world. In our framework, we also ask
-for the pivotal in-game goal of the game, the operation of the
-reward system, the main playful obstacles/challenges, the
-difficulty balancing and the win condition. A widespread
-technique used by game designers consists of translating game
-mechanics into verbs. Verbs in games are actions that can be
-performed within the procedural restrictions provided by rules and
-algorithms. Moreover, some games might subvert common game
-design mechanics in order to challenge the players’ expectations
-and to question their modes of thinking.   
+	The question of what game mechanics are is complex and it is discussed extensively within the field of game studies. In short, game mechanics are the “methods invoked by agents for interacting with the game world”. The mechanics involve the establishment of the rules that define the possibility space for operations in the game world. The SGDA framework also asks for the pivotal in-game goal of the game, the operation of the reward system, the main playful obstacles/challenges, the difficulty balancing and the win condition. 
+	
+	A widespread technique used by game designers consists of translating game mechanics into verbs. Verbs in games are actions that can be performed within the procedural restrictions provided by rules and algorithms. Moreover, some games might subvert common game design mechanics in order to challenge the players’ expectations and to question their modes of thinking.   
   &lt;/div&gt; 
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="102" name="Framing" tags="" position="1075,1350">&lt;style&gt;
 
@@ -4426,24 +4368,9 @@ and to question their modes of thinking.
     font-size: 75%;
 	animation: sgdaTitle 2s forwards;
 	animation-delay: .5s&quot;&gt;
-	Besides the five key design elements: purpose, content &amp;
-information, mechanics, fiction &amp; narratives and aesthetics &amp;
-graphics, a further additional aspect is the framing of these
-elements in terms of the target group, their play literacy and the
-broader topic of the game. While the target group and the
-audience are often addressed as an important issue in serious
-games design, the play literacy of the target group is repeatedly
-overlooked. Hence, the play literary of the players can essentially
-influence the gameplay experience. Is the target audience having
-trouble using the controls, understanding the user interface or
-recognizing the fiction of the game? What skills are needed? Are
-they too difficult or too easy to acquire? What genre of game is
-referenced and might cause particular expectations? Are the
-difficulty levels balanced in relation to the audience’s needs?
-Generally, many serious games try to offer easy access to players,
-but often lack a balanced and engaging game play experience.
-Hence, well-balanced and attractive learning challenges are one of
-the most fruitful potentials of games to foster learning. 
+	Besides the five key design elements - purpose, content and information, mechanics, fiction &amp; narratives and aesthetics and graphics - a further additional aspect is the framing of these elements in terms of the target group, their play literacy and the broader topic of the game. 
+	
+	While the target group and the audience are often addressed as an important issue in serious games design, the play literacy of the target group is repeatedly overlooked. Hence, the play literary of the players can essentially influence the gameplay experience. Is the target audience having trouble using the controls, understanding the user interface or recognizing the fiction of the game? What skills are needed? Are they too difficult or too easy to acquire? What genre of game is referenced and might cause particular expectations? Are the difficulty levels balanced in relation to the audience’s needs? Generally, many serious games try to offer easy access to players, but often lack a balanced and engaging game play experience. Hence, well-balanced and attractive learning challenges are one of the most fruitful potentials of games to foster learning. 
   &lt;/div&gt; 
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="103" name="Content/Information" tags="" position="1075,1500">&lt;style&gt;
 
@@ -4879,26 +4806,9 @@ the most fruitful potentials of games to foster learning.
     font-size: 75%;
 	animation: sgdaTitle 2s forwards;
 	animation-delay: .5s&quot;&gt;
-	The element content &amp; information refers to the information, facts
-and data offered and used in the game. For example, on a basic
-level, the content could relate to the stats of the players, the names
-of the protagonists or other supplementary information. In short,
-the content contains all the data and words provided in the game
-that are visible and made approachable to the players.
-Nevertheless, not all the content must be relevant within a game.
-While some games hardly use any approachable content, others
-are overloaded with stats or necessary data. The content of a
-serious game could be well presented, adequately formulated,
-“correct” or irrelevant, hard to access or insufficient, and in worst
-cases, just wrong and biased. In the past, serious game
-development was mainly focused on the quality and seriousness
-of the games’ content. The game mechanics were often simply
-built as an amusing topping to the serious content like “chocolatecovered
-broccoli”, which created a bad reputation of educational
-games as teaching instruments. Packing good content in a little
-bit of (unserious) fun became inefficient. Although the content
-only makes sense framed in the game system – analytically it can
-be separated and examined from the context of the information:  
+	Content and information refers to the information, facts and data offered and used in the game. For example, on a basic level, the content could relate to the stats of the players, the names of the protagonists or other supplementary information. In short, the content contains all the data and words provided in the game that are visible and made approachable to the players. Nevertheless, not all the content must be relevant within a game. While some games hardly use any approachable content, others are overloaded with stats or necessary data. 
+	
+	The content of a serious game could be well presented, adequately formulated, “correct” or irrelevant, hard to access or insufficient, and in worst cases, just wrong and biased. In the past, serious game development was mainly focused on the quality and seriousness of the games’ content. The game mechanics were often simply built as an amusing topping to the serious content like “chocolate-covered broccoli”, which created a bad reputation of educational games as teaching instruments. Packing good content in a little bit of (unserious) fun became inefficient. Although the content only makes sense framed in the game system – analytically it can be separated and examined from the context of the information.  
   &lt;/div&gt; 
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="104" name="Game System" tags="" position="950,1425">&lt;style&gt;
 
@@ -5338,24 +5248,13 @@ be separated and examined from the context of the information:
 	animation: sgdaTitle 2s forwards;
 	animation-delay: .5s&quot;&gt;
 	The pivotal function of the SGDA Framework is not only to
-decompose each of the design elements, but also to examine how
-they holistically relate to each other and to the game’s purpose.
-The SGDA Framework studies the game system as an integral
-entity that encircles the design elements to shape the game play
-experience. Shortly, one can argue that in games the whole is
-greater than the sum of its parts – but if the system is not
-cohesive, the whole can also be in a systematical conflict.
-The holistic serious game design assessment requires asking how
-the game’s purpose is reflected in the purpose, content &amp;
-information, mechanics, fiction &amp; narrative, aesthetics &amp;
-graphics and the framing of the game. Next, the relation among
-the game’s content and its fictional contextualization and
-mechanics is examined. Finally, the coherence and cohesiveness
-between the narrative and the mechanics in relation to their formal
-conceptual design is questioned. This holistic design-related
-evaluation is uncommon within the serious games research field.
-Thus, it offers a potential for a critical discourse about the strength
-and weaknesses of a serious game:   
+decompose each of a game&#x27;s design elements -- purpose, content/information, mechanics, fiction/narrative, aesthetics/graphics, and framing -- but also to examine how they holistically relate to each other and to the game’s purpose.
+	
+	The SGDA Framework studies the game system as an integral entity that encircles the design elements to shape the game play experience. Shortly, one can argue that in games the whole is greater than the sum of its parts – but if the system is not cohesive, the whole can also be in a systematical conflict.
+
+	The holistic serious game design assessment requires asking how the game’s purpose is reflected in the purpose, content &amp; information, mechanics, fiction &amp; narrative, aesthetics &amp; graphics and the framing of the game. Next, the relation among the game’s content and its fictional contextualization and mechanics is examined. Finally, the coherence and cohesiveness between the narrative and the mechanics in relation to their formal conceptual design is questioned. 
+
+This holistic design-related evaluation is uncommon within the serious games research field. Thus, it offers a potential for a critical discourse about the strength and weaknesses of a serious game:   
   &lt;/div&gt; 
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="105" name="SGDA Intro" tags="" position="950,1000">&lt;div style=&quot;opacity: 0; animation: fadeIn 2s .5s forwards;&quot;&gt;When setting out to create a new game, we should never set out empty handed. Being well-informed of similar games that we seek to create, and understanding the essential tenants that comprise an elegant purposeful game design are paramount.&lt;/div&gt;
 &lt;div style=&quot;opacity: 0; animation: fadeIn 2s .75s forwards;&quot;&gt;The work by MIT researcher Konstantin Mitgutsch in the realm of purposeful game design will aid greatly to this end. His framework, coined the //Serious Game Design Assessment (SGDA)//, seeks to evaluate the efficacy of purposeful games by consciously addressing the shortcomings of past serious game evaluation methodologies. It identifies six critical design elements - purpose, content/information, mechanics, fiction/narrative, aesthetics/graphics, and framing - which are investigated separately and jointly. We can use this framework as a lens to look back onto any game we seek to create.&lt;/div&gt;
